# ROS2LiDAR

./: Dockerfile  README.md
config/: demo.yaml
launch/: demo_launch.py
results/: detection_summary.csv  latency_stats.csv
scripts/: summarize_results.py
src/lidar_perception/: package.xml  setup.cfg  setup.py
src/lidar_perception/lidar_perception/: bev_projection.py  cluster_detector.py  latency_logger.py  pointcloud_player.py  utils.py
tests/: test_bev_projection.py  test_clustering.py
