<?xml version="1.0"?>
<package format="3">
  <name>lidar_perception</name>
  <version>0.0.1</version>
  <description>ROS2 LiDAR perception demo package.</description>
  <maintainer email="todo@example.com">JYins</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
